--- a/NC1_happybank/NC1-happybank-Info.plist
+++ b/NC1_happybank/NC1-happybank-Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>흔적체.ttf</string>
+		<string>나눔손글씨 다시 시작해.ttf</string>
+		<string>나눔손글씨 외할머니글씨.ttf</string>
+	</array>
 	<key>UILaunchScreen</key>
 	<dict>
 		<key>Launch Screen</key>
